GTK3 traditional themes: fix width of progressbar, broken in gtk+-3.14

--- a/desktop-themes/TraditionalOk/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/TraditionalOk/gtk-3.0/gtk-widgets.css
@@ -334,6 +334,10 @@ GtkColorEditor GtkColorSwatch.color-dark:hover {
  ****************/
 
 GtkProgressBar {
+	/* FIXME - Not working 3.14 */
+	-GtkProgressBar-min-horizontal-bar-height: 16;
+	-GtkProgressBar-min-vertical-bar-width: 16;
+	border-radius: 3px;
 	padding: 0 0 1px 0;
 }
 
